# automatica_tt

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  fixtures.json  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
store_service/: asgi.py  settings.py  urls.py  wsgi.py
